first test for an embedded integration with jboss 6