@@ -338,6 +338,116 @@
 		</profile>
 
 		<profile>
+			<id>jbossas-embedded-6</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.jboss.arquillian.container</groupId>
+					<artifactId>arquillian-jbossas-embedded-6</artifactId>
+					<version>${arquillian.version}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.jbossas</groupId>
+					<artifactId>jboss-as-depchain</artifactId>
+					<version>${jboss-as-client-6.version}</version>
+					<type>pom</type>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.jbossas</groupId>
+					<artifactId>jboss-as-client</artifactId>
+					<version>${jboss-as-client-6.version}</version>
+					<type>pom</type>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.shrinkwrap</groupId>
+					<artifactId>shrinkwrap-api</artifactId>
+					<version>${shrinkwrap.version}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.shrinkwrap</groupId>
+					<artifactId>shrinkwrap-impl-base</artifactId>
+					<version>${shrinkwrap.version}</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+			<dependencyManagement>
+				<dependencies>
+					<dependency>
+						<groupId>org.jboss.jbossas</groupId>
+						<artifactId>jboss-as-depchain</artifactId>
+						<version>${jboss-as-client-6.version}</version>
+						<type>pom</type>
+						<scope>import</scope>
+					</dependency>
+				</dependencies>
+			</dependencyManagement>
+			<build>
+				<resources>
+					<resource>
+						<directory>src/main/resources</directory>
+						<excludes>
+							<exclude>**/*</exclude>
+						</excludes>
+					</resource>
+				</resources>
+				<testResources>
+					<testResource>
+						<directory>src/test/resources</directory>
+					</testResource>
+					<testResource>
+						<directory>src/test/resources-jbossas</directory>
+					</testResource>
+				</testResources>
+				<plugins>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>${surefire.version}</version>
+						<configuration>
+							<skip>false</skip>
+							<testNGArtifactName>none:none</testNGArtifactName>
+							<excludes>
+								<exclude>**/ftest/**</exclude>
+								<exclude>**/hexcodes/**</exclude>
+							</excludes>
+							<additionalClasspathElements>
+								<additionalClasspathElement>${env.JBOSS_HOME}/client/jbossws-native-client.jar</additionalClasspathElement>
+								<!-- Because jbossweb.sar contains shared web.xml, which must be 
+									visible from same CL as TomcatDeployer.class.getClassLoader -->
+								<additionalClasspathElement>${env.JBOSS_HOME}/server/default/deploy/jbossweb.sar</additionalClasspathElement>
+							</additionalClasspathElements>
+							<redirectTestOutputToFile>true</redirectTestOutputToFile>
+							<trimStackTrace>false</trimStackTrace>
+							<classpathDependencyExcludes>
+								<classpathDependencyExclude>org.jboss.seam:jboss-seam</classpathDependencyExclude>
+								<classpathDependencyExclude>com.ocpsoft:ocpsoft-pretty-time</classpathDependencyExclude>
+								<classpathDependencyExclude>com.ocpsoft:prettyfaces-jsf2</classpathDependencyExclude>
+								<classpathDependencyExclude>org.richfaces.ui:richfaces-components-ui</classpathDependencyExclude>
+								<classpathDependencyExclude>org.richfaces.core:richfaces-core-impl</classpathDependencyExclude>
+							</classpathDependencyExcludes>
+							<printSummary>true</printSummary>
+							<forkMode>once</forkMode>
+							<!-- MaxPermSize Required to bump the space for relective data like 
+								classes, methods, etc. EMB-41. Endorsed required for things like WS support 
+								(EMB-61) -->
+							<argLine>
+								-Xmx512m -XX:MaxPermSize=256m
+								-Djava.net.preferIPv4Stack=true
+								-Djava.util.logging.manager=org.jboss.logmanager.LogManager
+								-Djava.endorsed.dirs=${env.JBOSS_HOME}/lib/endorsed
+								-Djboss.home=${env.JBOSS_HOME}
+								-Djboss.boot.server.log.dir=${env.JBOSS_HOME}
+								<!--  -->
+								-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y
+							</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
 			<id>jbossas-remote-6</id>
 			<dependencies>
 				<dependency>
